k8s/simple-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: lonely-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
    - name: redis
      image: redis:latest
      ports:
        - containerPort: 3491
