k8s/nodeport.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment-np
  labels:
    app: hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-nodeport
  template:
    metadata:
      labels:
        app: hello-nodeport
    spec:
      containers:
        - name: hello-app
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-np
spec:
  type: NodePort
  selector:
    app: hello-nodeport
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007 #Self-assigned from 30000 to 32767 if not specified
